force-app/main/default/objects/Production_Cost__c/Production_Cost__c.object-meta.xml
<CustomObject>
    <label>Production Cost</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Production Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>