force-app/main/default/objects/Production_Cost__c/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <label>Other Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>