force-app/main/default/objects/Production_Cost__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Cost</fullName>
            </value>
            <value>
                <fullName>One Time Set-Up Cost</fullName>
            </value>
            <value>
                <fullName>Acquisition Cost</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>